# locul3d

./: .gitignore  QUICKSTART.md  README.md  install.bat  install.sh  pyproject.toml  requirements.txt  start.bat  start.py  start.sh
doc/architecture/: README.md  data-model.md  e57-import-pipeline.md  loader-performance.md  panorama-rendering.md  rendering-pipeline.md
doc/functional/: README.md  features.md
src/locul3d/: __init__.py  __main__.py
src/locul3d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/locul3d/analysis/: ceiling.py  scene_correction.py
src/locul3d/core/: __init__.py  constants.py  correction.py  geometry.py  layer.py  scene.py
src/locul3d/editor/: __init__.py  main.py  viewport.py  window.py
src/locul3d/plugins/: __init__.py  base.py
src/locul3d/plugins/importers/: __init__.py  e57.py  loaders.py  obj.py  ply.py
src/locul3d/plugins/tools/: __init__.py  move.py  rotate.py  select.py
src/locul3d/rendering/: __init__.py  camera.py  gizmos.py
src/locul3d/rendering/gl/: __init__.py  viewport.py
src/locul3d/rendering/panorama/: __init__.py  camera.py  extractor.py  geometry.py  immersive.py  station_marker.py
src/locul3d/ui/: __init__.py  themes.py
src/locul3d/ui/dialogs/: correction_dialog.py  folder_loading.py
src/locul3d/ui/panels/: __init__.py  bbox.py  plane.py  reference.py
src/locul3d/ui/widgets/: __init__.py  color_swatch.py  info.py  layers.py
src/locul3d/utils/: __init__.py  io.py  math.py  metadata.py  signals.py
src/locul3d/viewer/: __init__.py  main.py  window.py
